--- a/index.html
+++ b/index.html
@@ -7,41 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
-
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
-
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+        <!-- Navigation Pane -->
+        <nav>
+            <img src="img/cw_logo-2.png" alt="Charity Water Logo" class="nav-logo">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Donate</a>
+            <a href="#">Contact</a>
+        </nav>
+        <!-- Main headline and subheadline at the top of the page, no box -->
+                <h1>
+                    A Small Drop.<br>
+                    <span style="display:inline-block; margin-left:40px;">A Bigger Ripple.</span>
+                </h1>
+    <p>Even a dollar can create waves of change. proof? It's in your cup...</p>
+    <!-- Donate button only, no yellow box or extra text -->
+    <a href="#" class="donate-button">Donate and Track Now</a>
 </body>
 </html>
