Refactor HTML structure and enhance CSS styles for improved readability and layout

--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <!-- Navigation Pane -->
-        <nav>
-            <img src="img/cw_logo-2.png" alt="Charity Water Logo" class="nav-logo">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Donate</a>
-            <a href="#">Contact</a>
-        </nav>
-        <!-- Main headline and subheadline at the top of the page, no box -->
-                <h1>
-                    A Small Drop.<br>
-                    <span style="display:inline-block; margin-left:40px;">A Bigger Ripple.</span>
-                </h1>
-    <p>Even a dollar can create waves of change. proof? It's in your cup...</p>
-    <!-- Donate button only, no yellow box or extra text -->
-    <a href="#" class="donate-button">Donate and Track Now</a>
+    <!-- Navigation Pane -->
+    <nav>
+        <img src="img/cw_logo-2.png" alt="Charity Water Logo" class="nav-logo">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Donate</a>
+        <a href="#">Contact</a>
+    </nav>
+        <!-- Main headline and subheadline at the top of the page, in white -->
+        <h1 class="main-headline">A Small Drop.<br><span style="display:inline-block; margin-left:40px;">A Bigger Ripple.</span></h1>
+        <p class="main-subheadline">Even a dollar can create waves of change. Proof? It's in your cup...</p>
+        <!-- Donate button only, no yellow box or extra text -->
+        <a href="#" class="donate-button">Donate and Track Now</a>
 </body>
 </html>
